# apue-exercises

./: .clang-format  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
chapter10/: 10.11.intr_write.c  10.12.largebuffer.c  10.2.sig2str.c  10.6.synchronization.c  10.9.sigprocmask.c  CMakeLists.txt  README.md  exercises.org
chapter11/: 11.1.thread-struct.c  CMakeLists.txt  README.md
chapter12/: 12.2.putenv.c  CMakeLists.txt  README.md
chapter13/: 13.4.daemon.c  CMakeLists.txt  README.md
chapter2/: 2.3.check-open-limits.c  CMakeLists.txt
chapter3/: 3.2.my-dup2.c  CMakeLists.txt
chapter4/: 4.1.stat-vs-lstat.c  4.11.new-myftw.c  4.11.old-myftw.c  4.16.deep-directory.c  4.17.dev-fd.c  4.6.copy-file.c  4.6.create-filehole.c  CMakeLists.txt  README.md  exercises.org
chapter5/: 5.1.setbuf.c  CMakeLists.txt  README.md
chapter6/: 6.3.uname.c  6.5.date.c  CMakeLists.txt  README.md
chapter7/: README.md
chapter8/: 8.1.vfork.c  8.2.program-stack.c  8.3.waitid.c  8.6.zombie.c  8.7.direxec.c  CMakeLists.txt  README.md
chapter9/: 9.2.session.c  CMakeLists.txt  README.md
